public/devoxxbe2014/schedule.css
.scheduleHeader{
    text-align: center;
    background-color: #211c1b;
    color:white;
}
.scheduleRow{
    background-color: #f5f5f5;
    border-color: #CED4BD;
    border-style: solid;
    border-width: 1px;

    text-align: center;
    vertical-align: middle;
    padding-top:20px;
    padding-bottom:20px;
}
.scheduleRight{
    text-align: right;
        padding-top:20px;
    padding-bottom:20px;
}

.agendaTable{
    border: 1px solid #ffd297;
    width: 125%
}

.agendaTable th{
    background-color: #211c1b;
    color:white;
}
.agendaTable td.room{
    width:14%
}
.agendaTable td.keynotes{
    text-align: center;
    background-color: #dbdbdb;
    height: 30px;
    line-height: 55px;
}
.agendaTable th.timeSlot{
    width: 6%;
}
.agendaTable .title{
    padding-bottom: 5px;
    display: block;
}
.agendaTable .speaker{
    font-style: italic;
    font-weight: lighter;
    display: block;
}
.agendaTable .iconTrack{
    display: block;
    height: 123px;
    width:180px
}
.agendaTable .room{
    max-width: 16%;
    vertical-align: top;
    border: 1px solid #ffd297;
}
.agendaTable .track{
    display: block;
}
.agendaTable .talkType{
    display: block;
    background-color: #1f1f1f;
    color:white;
    padding: 2px;
    text-align: center;
}
.agendaTable .speaker{
    font-size: 0.9em;
}
.speakerDetail{
    max-height: 128px;
    max-width: 128px;
    float: left;
    margin-right: 20px;
    margin-top: 22px;
}
a.speakerTwitter, a.blackLink{
 color:#222222;
    text-decoration: none;
}
.trackBox{
    min-height: 288px;
    position: relative;
    padding: 10px;
}
table.mainSchedule{
    width: 100%;
}
tr.rowHeightThree{
    height: 100px;
}
td.break{
    background-color: #fee3ca;
    font-weight: bold;
    text-align: center;
    vertical-align: middle;
}
td.notAllocated{
    text-align: center;
    font-style: italic;
    font-weight: bold;
    max-width: 16%;
    border: 1px solid #ffd297;
}

button.searchBtn{
font-size: 12px;
color: #fff;
text-transform: uppercase;
padding-left: 10px;
padding-right: 10px;
display: inline-block;
vertical-align: middle;
height: 30px;
line-height: 30px;
background-color: #f54f36;
margin-top: 5px;
border: 1px solid transparent;
-webkit-transition: all 0.3s;
transition: all 0.3s;
}

h4.speakerTitle{
    padding-top: 15px;
}

